A lot of things happens here, too lazy to write everything sorry

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,12 @@
     },
     "/identify": {
       "target": "http://localhost:3020"
+    },
+    "/login": {
+      "target": "http://localhost:3020"
+    },
+    "/register": {
+      "target": "http://localhost:3020"
     }
   },
   "scripts": {
