Finish login and register functionnalities

--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     },
     "/register": {
       "target": "http://localhost:3020"
+    },
+    "/logout": {
+      "target": "http://localhost:3020"
     }
   },
   "scripts": {
