Start handling file upload

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,9 @@
     },
     "/logout": {
       "target": "http://localhost:3020"
+    },
+    "/tree": {
+      "target": "http://localhost:3020"
     }
   },
   "scripts": {
